# spotify-themes-analyser

./: .gitignore  README.md
backend/: .gitignore
backend/lambdas/user_spotify_data_retrieval/: Dockerfile  lambda_function.py  main.py  pyproject.toml  requirements.txt
backend/lambdas/user_spotify_data_retrieval/src/: lambda_function.py
backend/lambdas/user_spotify_data_retrieval/src/core/: config.py  db.py
backend/lambdas/user_spotify_data_retrieval/src/factories/: pipeline_factory.py
backend/lambdas/user_spotify_data_retrieval/src/mappers/: db_to_dto.py  domain_to_db.py  dto_to_db.py  dto_to_dto.py  spotify_to_dto.py
backend/lambdas/user_spotify_data_retrieval/tests/: conftest.py
lambdas/user_spotify_data_retrieval/: Dockerfile  pyproject.toml  pytest.ini  run_tests.py
lambdas/user_spotify_data_retrieval/src/: lambda_function.py
lambdas/user_spotify_data_retrieval/src/core/: config.py  db.py
lambdas/user_spotify_data_retrieval/src/factories/: pipeline_factory.py
lambdas/user_spotify_data_retrieval/src/models/: db.py  domain.py  enums.py  event.py  shared.py
lambdas/user_spotify_data_retrieval/src/orchestrators/: data_collection_orchestrator.py
lambdas/user_spotify_data_retrieval/src/pipelines/: profile_pipeline.py  top_artists_pipeline.py  top_emotions_pipeline.py  top_genres_pipeline.py
lambdas/user_spotify_data_retrieval/src/repositories/: track_emotional_profiles_repository.py  track_lyrics_repository.py
lambdas/user_spotify_data_retrieval/src/services/: data_collection_service.py
lambdas/user_spotify_data_retrieval/src/utils/: calculations.py
lambdas/user_spotify_data_retrieval/tests/: conftest.py
lambdas/user_spotify_data_retrieval/tests/pipelines/: test_top_genres_pipeline.py
lambdas/user_spotify_data_retrieval/tests/unit/: test_calculations.py  test_top_emotions_pipeline.py  test_top_genres_pipeline.py
(+114 files in other folders)
